--- a/center/src/main/resources/application.properties
+++ b/center/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 server.port=1111
 
+# 设为false，关闭自我保护
+eureka.server.enable-self-preservation=false
 eureka.instance.hostname=localhost
 #eureka.instance.hostname=192.168.1.139
 #eureka.instance.hostname=center
