--- a/order/src/main/resources/application.properties
+++ b/order/src/main/resources/application.properties
@@ -15,8 +15,8 @@
 #实际配置内容
 
 #基本内容
-spring.application.name=SERVICE-SERVICE
-server.port=1236
+spring.application.name=ORDER-SERVICE
+server.port=1239
 #eureka.client.service-url.defaultZone=http://192.168.1.139:1111/eureka/
 eureka.client.service-url.defaultZone=http://localhost:1111/eureka/
 #eureka.client.service-url.defaultZone=http://center:1111/eureka/
@@ -24,7 +24,7 @@ eureka.client.service-url.defaultZone=http://localhost:1111/eureka/
 #数据库连接配置
 #mysql
 spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://localhost:3306/service?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&characterSetResults=utf8&useSSL=false&verifyServerCertificate=false&autoReconnct=true&autoReconnectForPools=true&allowMultiQueries=true
+spring.datasource.url=jdbc:mysql://localhost:3306/serviceorder?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&characterSetResults=utf8&useSSL=false&verifyServerCertificate=false&autoReconnct=true&autoReconnectForPools=true&allowMultiQueries=true
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
